# tympy

./: .gitlab-ci.yml  LICENSE  PKG-INFO  README.md  pyproject.toml  setup.py
.gitlab/issue_templates/: bug_report.md
src/timed_output/: timed_output.py
tests/: example_1.py  example_2.py  example_3.py  test_input.py
tests/test_data/: example_2.py
tympy/: __init__.py  tympy.py
